@@ -3,7 +3,6 @@
 /* gnuplot feature enablers */
 #define BINARY_DATA_FILE	1
 #define GP_ENH_EST		1
-#define GP_FIT_ERRVARS		1
 #define GP_ISVAR		1
 #define GP_MACROS		1
 #define HIDDEN3D_QUADTREE	1
