@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.266 2010/03/14 18:52:42 sfeam Exp $
+dnl $Id: configure.in,v 1.267 2010/05/02 20:56:08 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
@@ -900,15 +900,6 @@ AC_ARG_ENABLE(mgr,dnl
        [-lpixrect])
    fi])
 
-dnl fitting error variables
-AC_ARG_ENABLE(fiterrvars,dnl
-[  --disable-fiterrvars    disable fitting error variables],,
-  [test -z "${enable_fiterrvars}" && enable_fiterrvars=yes])
-if test "$enable_fiterrvars" = yes; then
-  AC_DEFINE(GP_FIT_ERRVARS, 1,
-            [ Define to allow 'fit' to create parameter error variables. ])
-fi
-
 dnl Redwood Graphics Interface Protocol
 AC_ARG_ENABLE(rgip,dnl
 [  --enable-rgip           enable Redwood Graphics Interface Protocol],
@@ -1394,12 +1385,6 @@ if test "$enable_mouse" = yes; then
   AC_MSG_RESULT([  Mouse support in interactive terminals: yes])
 else
   AC_MSG_RESULT([  Mouse support in interactive terminals: no])
-fi
-
-if test "$enable_fiterrvars" = yes; then
-  AC_MSG_RESULT([  Fitting error variables: yes])
-else
-  AC_MSG_RESULT([  Fitting error variables: no])
 fi
 
 if test "$enable_volatile_data" = yes; then
